--- a/THPTQG.ipynb
+++ b/THPTQG.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ra0yajnx_v0SY56frrGHmuDSsieS8t0E",
-      "authorship_tag": "ABX9TyPbCEenr+5c2bCrmwcCTgEh",
+      "authorship_tag": "ABX9TyMIZfzGPiG/vaUCM0F703Z5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,22 +46,10 @@
         "drive.mount(\"/content/drive\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K307lAvNysjA",
-        "outputId": "07c2bce5-91d3-4c85-9ad9-afe0ab2077b1"
+        "id": "K307lAvNysjA"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -75,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "e7B9riSZ7_DA"
       },
@@ -120,7 +108,7 @@
       "metadata": {
         "id": "iD4tGlLe8LNT"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -222,7 +210,7 @@
       "metadata": {
         "id": "p6_rzX2kq_Qx"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -245,27 +233,30 @@
         "  except:\n",
         "    print(\"Thư mực đã tồn tại !!!\")\n",
         "  filename = str(input(\"Nhap ten file can luu (vi du: diemthi2022.csv): \")) #tạo tên file lưu\n",
-        "  dir = folder+filename\n",
-        "  # try:\n",
-        "  #   os.system(\"touch \"+dir)#Tao file de luu tru\n",
-        "  #   print(\"Đã tạo file lưu trữ tại \" + dir)\n",
-        "  # except:\n",
-        "  #   print(\"File đã tồn tại!!\")\n",
-        "  # time.sleep(10)\n",
+        "  dir = folder+\"/\"+filename\n",
+        "  # print(dir)\n",
+        "  try:\n",
+        "    os.system(\"touch \"+dir)#Tao file de luu tru\n",
+        "    print(\"Đã tạo file lưu trữ tại \" + dir)\n",
+        "  except:\n",
+        "    print(\"File đã tồn tại!!\")\n",
+        "  \n",
         "  number = 1\n",
         "  i =0\n",
         "  idTinh =1\n",
         "  \n",
-        "  file = open(dir,mode=\"w\")\n",
+        "  file = open(dir,mode=\"w+\")\n",
         "  file.write(\"sbd,toan,van,ngoaiNgu,vatLy,hoaHoc,sinhHoc,diemTBTuNhien,lichSu,diaLy,gdcd,diemTBXaHoi,\\n\")\n",
         "  while True:\n",
         "    SBD = CreateSBD(idTinh,number).create() #tao so bao danh \n",
         "    try: #sử dụng ngoại lệ để khi số báo danh không có người thi thì sẽ không bị dừng process\n",
         "      process = GetData(2022,SBD).rawData()\n",
         "      if process['sbd'] == None:\n",
-        "        print(f\"SBD không tồn tại {i}\")\n",
+        "        \n",
+        "        print(f\"{SBD} không tồn tại {i}\")\n",
         "        i += 1\n",
         "      else:\n",
+        "        i = 0\n",
         "        s = \"\"\n",
         "        \n",
         "        for key,mark in process.items():\n",
@@ -275,104 +266,21 @@
         "        file.write(s+\"\\n\")\n",
         "        print(f\"Đã Crawl {SBD} thành công!!\")\n",
         "    except:\n",
-        "      print(f\"SBD không tồn tại!!!\")\n",
+        "      print(f\"{SBD} không tồn tại!!!\")\n",
         "      i += 1\n",
         "    number += 1\n",
         "    if i>100: #khi chạy 100 thí sinh kế tiếp mà kh có dữ liệu thì chuyển qua mã tỉnh khác\n",
         "      idTinh += 1\n",
+        "      i = 0\n",
         "    if idTinh == 65: #vi ma tinh chay tu 1 den 64, nen qua 65 sẽ kết thúc\n",
         "      break\n",
         "  file.close()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6leW4R2g9-ju",
-        "outputId": "05a3e651-3116-4afa-e69d-296f6aa06dd3"
+        "id": "6leW4R2g9-ju"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Thư mực đã tồn tại !!!\n",
-            "Nhap ten file can luu (vi du: diemthi2022.csv): diemthi2022.csv\n",
-            "Đã Crawl 01000001 thành công!!\n",
-            "Đã Crawl 01000002 thành công!!\n",
-            "Đã Crawl 01000003 thành công!!\n",
-            "Đã Crawl 01000004 thành công!!\n",
-            "Đã Crawl 01000005 thành công!!\n",
-            "Đã Crawl 01000006 thành công!!\n",
-            "Đã Crawl 01000007 thành công!!\n",
-            "Đã Crawl 01000008 thành công!!\n",
-            "Đã Crawl 01000009 thành công!!\n",
-            "Đã Crawl 01000010 thành công!!\n",
-            "Đã Crawl 01000011 thành công!!\n",
-            "Đã Crawl 01000012 thành công!!\n",
-            "Đã Crawl 01000013 thành công!!\n",
-            "Đã Crawl 01000014 thành công!!\n",
-            "Đã Crawl 01000015 thành công!!\n",
-            "Đã Crawl 01000016 thành công!!\n",
-            "Đã Crawl 01000017 thành công!!\n",
-            "Đã Crawl 01000018 thành công!!\n",
-            "Đã Crawl 01000019 thành công!!\n",
-            "Đã Crawl 01000020 thành công!!\n",
-            "Đã Crawl 01000021 thành công!!\n",
-            "Đã Crawl 01000022 thành công!!\n",
-            "Đã Crawl 01000023 thành công!!\n",
-            "Đã Crawl 01000024 thành công!!\n",
-            "Đã Crawl 01000025 thành công!!\n",
-            "Đã Crawl 01000026 thành công!!\n",
-            "Đã Crawl 01000027 thành công!!\n",
-            "Đã Crawl 01000028 thành công!!\n",
-            "Đã Crawl 01000029 thành công!!\n",
-            "Đã Crawl 01000030 thành công!!\n",
-            "Đã Crawl 01000031 thành công!!\n",
-            "Đã Crawl 01000032 thành công!!\n",
-            "Đã Crawl 01000033 thành công!!\n",
-            "Đã Crawl 01000034 thành công!!\n",
-            "Đã Crawl 01000035 thành công!!\n",
-            "Đã Crawl 01000036 thành công!!\n",
-            "Đã Crawl 01000037 thành công!!\n",
-            "Đã Crawl 01000038 thành công!!\n",
-            "Đã Crawl 01000039 thành công!!\n",
-            "Đã Crawl 01000040 thành công!!\n",
-            "Đã Crawl 01000041 thành công!!\n",
-            "Đã Crawl 01000042 thành công!!\n",
-            "Đã Crawl 01000043 thành công!!\n",
-            "Đã Crawl 01000044 thành công!!\n",
-            "Đã Crawl 01000045 thành công!!\n",
-            "Đã Crawl 01000046 thành công!!\n",
-            "Đã Crawl 01000047 thành công!!\n",
-            "Đã Crawl 01000048 thành công!!\n",
-            "Đã Crawl 01000049 thành công!!\n",
-            "Đã Crawl 01000050 thành công!!\n",
-            "Đã Crawl 01000051 thành công!!\n",
-            "Đã Crawl 01000052 thành công!!\n",
-            "Đã Crawl 01000053 thành công!!\n",
-            "Đã Crawl 01000054 thành công!!\n",
-            "SBD không tồn tại!!!\n",
-            "SBD không tồn tại!!!\n",
-            "Đã Crawl 01000057 thành công!!\n",
-            "Đã Crawl 01000058 thành công!!\n",
-            "Đã Crawl 01000059 thành công!!\n",
-            "Đã Crawl 01000060 thành công!!\n",
-            "Đã Crawl 01000061 thành công!!\n",
-            "Đã Crawl 01000062 thành công!!\n",
-            "Đã Crawl 01000063 thành công!!\n",
-            "Đã Crawl 01000064 thành công!!\n",
-            "Đã Crawl 01000065 thành công!!\n",
-            "Đã Crawl 01000066 thành công!!\n",
-            "Đã Crawl 01000067 thành công!!\n",
-            "Đã Crawl 01000068 thành công!!\n",
-            "Đã Crawl 01000069 thành công!!\n",
-            "Đã Crawl 01000070 thành công!!\n",
-            "Đã Crawl 01000071 thành công!!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
